test/org/midica/testfiles/failing/eff-cd-src-unknown-3.midica
INCLUDE inc/instruments.midica

0: ctrl_dest
0:   .src(ctrl=5=7)
0:   .dest(vol,10%)
0:   .on()

